
[package]
edition = "2021"
name = "cpvc"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
cpvc = { git = "https://github.com/SomaticIT/cpvc.git" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
